docs-archive/apache-airflow/3.0.0/_sources/_api/airflow/models/connection/index.rst.txt
airflow.models.connection
=========================

.. py:module:: airflow.models.connection


Attributes
----------

.. autoapisummary::

   airflow.models.connection.log
   airflow.models.connection.RE_SANITIZE_CONN_ID
   airflow.models.connection.CONN_ID_MAX_LEN


Classes
-------

.. autoapisummary::

   airflow.models.connection.Connection


Functions
---------

.. autoapisummary::

   airflow.models.connection.sanitize_conn_id


Module Contents
---------------

.. py:data:: log

.. py:data:: RE_SANITIZE_CONN_ID

.. py:data:: CONN_ID_MAX_LEN
   :type:  int
   :value: 250


.. py:function:: sanitize_conn_id(conn_id, max_length=CONN_ID_MAX_LEN)

   Sanitizes the connection id and allows only specific characters to be within.

   Namely, it allows alphanumeric characters plus the symbols #,!,-,_,.,:,\,/ and () from 1 and up to
   250 consecutive matches. If desired, the max length can be adjusted by setting `max_length`.

   You can try to play with the regex here: https://regex101.com/r/69033B/1

   The character selection is such that it prevents the injection of javascript or
   executable bits to avoid any awkward behaviour in the front-end.

   :param conn_id: The connection id to sanitize.
   :param max_length: The max length of the connection ID, by default it is 250.
   :return: the sanitized string, `None` otherwise.


.. py:class:: Connection(conn_id = None, conn_type = None, description = None, host = None, login = None, password = None, schema = None, port = None, extra = None, uri = None)

   Bases: :py:obj:`airflow.models.base.Base`, :py:obj:`airflow.utils.log.logging_mixin.LoggingMixin`


   Placeholder to store information about different database instances connection information.

   The idea here is that scripts use references to database instances (conn_id)
   instead of hard coding hostname, logins and passwords when using operators or hooks.

   .. seealso::
       For more information on how to use this class, see: :doc:`/howto/connection`

   :param conn_id: The connection ID.
   :param conn_type: The connection type.
   :param description: The connection description.
   :param host: The host.
   :param login: The login.
   :param password: The password.
   :param schema: The schema.
   :param port: The port number.
   :param extra: Extra metadata. Non-standard data such as private/SSH keys can be saved here. JSON
       encoded object.
   :param uri: URI address describing connection parameters.


   .. py:attribute:: EXTRA_KEY
      :value: '__extra__'



   .. py:attribute:: __tablename__
      :value: 'connection'



   .. py:attribute:: id


   .. py:attribute:: conn_id


   .. py:attribute:: conn_type


   .. py:attribute:: description


   .. py:attribute:: host


   .. py:attribute:: schema


   .. py:attribute:: login


   .. py:attribute:: port


   .. py:attribute:: is_encrypted


   .. py:attribute:: is_extra_encrypted


   .. py:method:: on_db_load()


   .. py:method:: get_uri()

      Return the connection URI in Airflow format.

      The Airflow URI format examples: https://airflow.apache.org/docs/apache-airflow/stable/howto/connection.html#uri-format-example

      Note that the URI returned by this method is **not** SQLAlchemy-compatible, if you need a SQLAlchemy-compatible URI, use the :attr:`~airflow.providers.common.sql.hooks.sql.DbApiHook.sqlalchemy_url`



   .. py:method:: get_password()

      Return encrypted password.



   .. py:method:: set_password(value)

      Encrypt password and set in object attribute.



   .. py:property:: password

      Password. The value is decrypted/encrypted when reading/setting the value.



   .. py:method:: get_extra()

      Return encrypted extra-data.



   .. py:method:: set_extra(value)

      Encrypt extra-data and save in object attribute to object.



   .. py:property:: extra

      Extra data. The value is decrypted/encrypted when reading/setting the value.



   .. py:method:: rotate_fernet_key()

      Encrypts data with a new key. See: :ref:`security/fernet`.



   .. py:method:: get_hook(*, hook_params=None)

      Return hook based on conn_type.



   .. py:method:: __repr__()


   .. py:method:: test_connection()

      Calls out get_hook method and executes test_connection method on that.



   .. py:method:: get_extra_dejson(nested = False)

      Deserialize extra property to JSON.

      :param nested: Determines whether nested structures are also deserialized into JSON (default False).



   .. py:property:: extra_dejson
      :type: dict


      Returns the extra property by deserializing json.



   .. py:method:: get_connection_from_secrets(conn_id)
      :classmethod:


      Get connection by conn_id.

      If `MetastoreBackend` is getting used in the execution context, use Task SDK API.

      :param conn_id: connection id
      :return: connection



   .. py:method:: from_json(value, conn_id=None)
      :classmethod:



   .. py:method:: as_json()

      Convert Connection to JSON-string object.



